--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -5,6 +5,9 @@
 
 .content {
   flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  align-self: center;
   flex-wrap: wrap;
 }
 .first-page{
