fix routes and buttons position

--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -11,5 +11,5 @@
       <img src="../../assets/images/profile.jpg" alt="profileImg">
     </div>
   </div>
-  <button type="button" routerLink="/home" fragment = "projects">View my work </button>
+  <button type="button" routerLink="" fragment = "projects">View my work </button>
 </div>
