--- a/src/app/contact/contact.component.css
+++ b/src/app/contact/contact.component.css
@@ -1,8 +1,10 @@
 .container {
+  height: 50vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
 }
+
 p {
   color: white;
   font-family: 'Helvetica';
