--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -6,11 +6,11 @@
     </div>
     <br><br><br>
     <ul class="list-unstyled components">
-      <li><a routerLink = '/home'> Home </a></li>
-      <li><a routerLink = '/home' fragment = "education"> Education </a></li>
-      <li><a routerLink = '/home' fragment = "projects"> Projects </a></li>
-      <li><a routerLink = '/home' fragment = "career"> Career </a></li>
-      <li><a routerLink = '/home' fragment = "contact"> Contact </a></li>
+      <li><a routerLink = ''> Home </a></li>
+      <li><a routerLink = '' fragment = "education"> Education </a></li>
+      <li><a routerLink = '' fragment = "projects"> Projects </a></li>
+      <li><a routerLink = '' fragment = "career"> Career </a></li>
+      <li><a routerLink = '' fragment = "contact"> Contact </a></li>
     </ul>
     <div class="images">
       <a href="https://github.com/roeibadur" target="_blank"><img src="../../assets/images/github.png" alt="Github"></a>
