--- a/src/app/menu/menu.component.css
+++ b/src/app/menu/menu.component.css
@@ -5,7 +5,7 @@
 
 #sidebar {
   position: fixed;
-  width: 250px;
+  width: 10%;
   top: 0;
   left: 0;
   height: 100vh;
@@ -59,5 +59,5 @@ a {
   display: flex;
 }
 img {
-  margin-left: 20px;
+  margin-left: 10px;
 }
