--- a/src/app/career/career.component.html
+++ b/src/app/career/career.component.html
@@ -6,14 +6,18 @@
     <h3>Full-Stack Developer – part time position | Level App | December 2020 - Now</h3>
   </div>
   <br>
-  <p>I work as a Full-Stack developer at Level App company, building web-applications using Angular 9 with NodeJS.</p>
-  <pre>           I use Git to build, update, maintain and review the projects.</pre>
+  <p>
+    I work as a Full-Stack developer at Level App company, building web-applications using Angular 9 with NodeJS.<br>
+    I use Git to build, update, maintain and review the projects.
+  </p>
   <br>
   <div class="work">
     <img src="../../assets/images/verint.png">
     <h3>IT Specialist – student position | Verint | February 2019 – Now</h3>
   </div>
   <br>
-  <p>During my work I learned how to work under pressure and achieve good results within the company's structure</p>
-  <pre>           incorporating new technologies that the company deals with.</pre>
+  <p>
+    supporting 6,000 workers with VPN,AD, Azure , Microsoft Exchange,Jira and advanced Cyber tools.<br>
+    During my work I learned how to work under pressure and achieve good results within the company's structure incorporating new technologies that the company deals with.
+  </p>
 </div>
