--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,7 +1,7 @@
 <div class="wrapper">
   <nav id="sidebar">
     <div class="sidebar-header">
-      <a routerLink = "/home" style="text-decoration: none;"><h3>Roei Badur</h3>
+      <a routerLink = "/home" style="text-decoration: none; color:white;"><h2>Roei Badur</h2>
       <p> Full-Stack Developer</p></a>
     </div>
     <br><br><br>
