--- a/src/app/about-me/about-me.component.css
+++ b/src/app/about-me/about-me.component.css
@@ -34,7 +34,15 @@ button {
    padding-bottom: 10px;
    padding-left: 45px;
    padding-right: 45px;
-   margin-left: 40%;
+   margin: 10px;
+}
+
+.buttons {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  align-self: center;
 }
 
 button:hover {
@@ -45,6 +53,9 @@ button:hover {
   padding-bottom: 10px;
   padding-left: 45px;
   padding-right: 45px;
-  margin-left: 40%;
+  margin: 10px;
 }
+
+
+
 
